# asymmetronome

./: LICENSE.md  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jedparsons/metronome/: HorizontalDragHandler.kt  MetronomeActivity.kt
app/src/main/java/com/jedparsons/metronome/player/: MetronomePlayer.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
metronome-android/: .gitignore  PRIVACY.md  build.gradle  settings.gradle
metronome-android/app/: build.gradle
metronome-android/app/src/androidTest/java/com/jedparsons/metronome/: ExampleInstrumentedTest.kt  MetronomeScreenRobot.kt  MetronomeScreenTest.kt
metronome-android/app/src/main/: AndroidManifest.xml
metronome-android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
metronome-android/app/src/main/java/com/jedparsons/metronome/: AppContainer.kt  MetronomeActivity.kt  MetronomeApplication.kt
metronome-android/app/src/main/res/values/: strings.xml
metronome-android/app/src/test/java/com/jedparsons/metronome/: ExampleUnitTest.kt  MetronomeControllerTest.kt  SharedPrefsRhythmStoreTest.kt
metronome-ios/: .gitignore  MetronomeApp.swift  MetronomeAudioPlayer.swift  MetronomeModel.swift  MetronomeView.swift  MetronomeViewModel.swift  PRIVACY.md
metronome-ios/metronome/metronome.xcodeproj/: project.pbxproj
metronome-ios/metronome/metronome.xcodeproj/project.xcworkspace/xcuserdata/jed.xcuserdatad/: UserInterfaceState.xcuserstate
metronome-ios/metronome/metronome/Assets.xcassets/AppIcon.appiconset/: Contents.json
metronome-ios/metronome/metronomeTests/: metronomeTests.swift
metronome-ios/metronome/metronomeUITests/: metronomeUITests.swift  metronomeUITestsLaunchTests.swift
(+17 files in other folders)
